--- a/src/components/ExpanseItem.css
+++ b/src/components/ExpanseItem.css
@@ -2,34 +2,52 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-radius: 15px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-  padding: 5px;
-  color: rgb(226, 38, 38);
+  padding: 0.5rem;
+  margin: 1rem 0;
+  background-color: #4b4b4b;
 }
 
 .expense-item__description {
   display: flex;
   flex-direction: column;
-  color: rgba(250, 246, 246, 0.733);
   gap: 1rem;
-  align-items: flex-start;
+  align-items: flex-end;
   flex-flow: column-reverse;
+  justify-content: flex-start;
+  flex: 1;
+}
+
+.expense-item h2 {
+  color: #3a3a3a;
+  font-size: 1rem;
+  flex: 1;
+  margin: 0 1rem;
+  color: white;
 }
 
 .expense-item__price {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  flex-flow: column-reverse;
+  font-size: 1rem;
+  font-weight: bold;
+  color: white;
+  background-color: #40005d;
   border: 1px solid white;
-  border-radius: 15px;
-  padding: 0 15px;
-  color: #fff;
-  gap: 1rem;
-  background-color: rgb(66, 6, 66);
+  padding: 0.5rem;
+  border-radius: 12px;
 }
 
-.date {
-  color: white;
+@media (min-width: 580px) {
+  .expense-item__description {
+    display: block;
+    align-items: center;
+    justify-content: flex-start;
+  }
+
+  .expense-item__description h2 {
+    font-size: 1.25rem;
+  }
+
+  .expense-item__price {
+    font-size: 1.25rem;
+    padding: 0.5rem 1.5rem;
+  }
 }
